Tweak notification stylesAdd a better animation and also avoid obscuring content when inactive.Remove the notification after 3s (down from 10s, whcih really felt like it was too long)

--- a/less/styles.less
+++ b/less/styles.less
@@ -74,12 +74,12 @@ h1 {
     border: 1px solid #393939;
     background: #292929;
     background: rgba(0, 0, 0, 0.1);
-    color: #444;
+    color: #666;
     border-radius: 10px;
     box-shadow: inset 0 0 20px 3px rgba(11, 11, 11, 0.1);
 
     a {
-        color: #555;
+        color: #777;
 
         &:hover,
         &:focus { 
@@ -91,23 +91,25 @@ h1 {
 
 #notifications {
     position:fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
+    top: -200px;
+    right: 20px;
     opacity: 0;
-    transition: opacity 0.3s 0.1s ease-in-out;
+    transition: all 0.3s ease-in-out;
 
     &.active {
         opacity: 1;
+        top: 10px;
     }
 
     .notification {
+        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
         width: 100%;
-        padding: 20px 10px;
+        padding: 20px;
         color: #000;
         text-align: center;
         font-size: 24px;
         font-weight: bold;
+        border-radius: 3px;
 
         &.success {
             background-color: @success-color;
